<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f9f9f9"
    tools:context=".ui.activity.LoginActivity"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/login_logo_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            android:src="@mipmap/logo" />
        <ImageView
            android:id="@+id/login_logo_cloud_view"
            android:layout_width="72dp"
            android:layout_height="82dp"
            android:tint="#393939"
            android:src="@mipmap/splash_logo_cloud"/>
        <ImageView
            android:id="@+id/login_logo_sun_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:src="@mipmap/splash_logo_sun"/>
    </FrameLayout>


    <TextView
        android:id="@+id/login_logo_words"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="#333333"
        android:textSize="28sp" />

    <com.moos.weather.ui.view.RippleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">

        <FrameLayout
            android:id="@+id/act_phone_reg_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <!-- 登录页面-->
            <LinearLayout
                android:id="@+id/login_container_login_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/login_page_edit_account"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/login_edit_large_selector"
                    android:hint="@string/login_account_edit_tips"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColorHint="#d7d7d7"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/login_page_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_edit_large_selector"
                    android:hint="@string/login_password_edit_tips"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="#d7d7d7"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/login_page_button_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/login_enter_button_selector"
                    android:text="@string/login_bt_login"
                    android:textColor="#fff"
                    android:textSize="18sp" />
                <!--<com.dd.CircularProgressButton-->
                    <!--android:id="@+id/login_page_button_progress_login"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="56dp"-->
                    <!--android:layout_marginTop="32dp"-->
                    <!--android:layout_marginLeft="30dp"-->
                    <!--android:layout_marginRight="30dp"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:textSize="18sp"-->
                    <!--app:cpb_colorIndicator="#565656"-->
                    <!--app:cpb_textComplete="@string/login_success"-->
                    <!--app:cpb_textError="@string/login_failed"-->
                    <!--app:cpb_textIdle="@string/login_bt_login" />-->

                <TextView
                    android:id="@+id/login_page_text_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_password_forget"
                    android:textColor="#b9b9b9"
                    android:textSize="12sp" />


            </LinearLayout>
            <!-- 邮箱注册页面-->

            <LinearLayout
                android:id="@+id/login_container_register_by_email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <EditText
                    android:id="@+id/register_page_email_edit_account"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/login_edit_large_selector"
                    android:hint="@string/login_register_email_edit_tips"
                    android:padding="12dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColorHint="#d7d7d7"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/register_page_email_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_edit_large_selector"
                    android:hint="@string/login_register_password_edit_tips"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColorHint="#d7d7d7"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/register_page_email_button_register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/login_enter_button_selector"
                    android:text="@string/login_register_bt_register"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/register_page_email_register_by_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_register_phone"
                    android:textColor="#58d1dd"
                    android:textSize="12sp"

                    />
            </LinearLayout>
            <!-- 手机号注册页面-->

            <LinearLayout
                android:id="@+id/login_container_register_by_phone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="#f9f9f9"
                android:visibility="gone"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/register_page_phone_edit_account"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/login_edit_large_selector"
                    android:hint="@string/login_register_phone_edit_tips"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColorHint="#d7d7d7"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/register_page_phone_get_code_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_edit_large_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/register_page_phone_edit_code"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_weight="2.45"
                        android:background="@null"
                        android:hint="@string/login_register_code_edit_tips"
                        android:inputType="number"
                        android:maxLength="6"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColorHint="#d7d7d7"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="#cdcdcd" />

                    <TextView
                        android:id="@+id/register_page_phone_button_get_code"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/login_register_get_code"
                        android:textColor="#7ae0ec" />
                </LinearLayout>


                <Button
                    android:id="@+id/register_page_phone_button_register"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/login_enter_button_selector"
                    android:text="@string/login_register_bt_register"
                    android:textColor="#fff"
                    android:textSize="18sp" />


                <LinearLayout
                    android:id="@+id/register_page_phone_register_by_email"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_register_no_phone"
                        android:textColor="#b9b9b9"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_register_email"
                        android:textColor="#47cbd5" />
                </LinearLayout>
            </LinearLayout>

        </FrameLayout>
    </com.moos.weather.ui.view.RippleView>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/act_phone_reg_go_reg"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/login_register_zhijian_account"
            android:textColor="#212121"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/act_phone_reg_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/login_register_have_account"
            android:textColor="#4cd8e6"
            android:textSize="12sp"

            />
    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:layout_toLeftOf="@+id/act_reg_phone_other_parties"
            android:background="#969696"

            />

        <TextView
            android:id="@+id/act_reg_phone_other_parties"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/login_by_other_way"
            android:textColor="#666666"
            android:textSize="10sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="22dp"
            android:layout_toRightOf="@+id/act_reg_phone_other_parties"
            android:background="#969696"

            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_page_button_qq_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="30dp"
            android:tint="#565656"
            android:src="@mipmap/qq_icon_black_3" />

        <ImageView
            android:id="@+id/login_page_button_wechat_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:tint="#565656"
            android:src="@mipmap/wechat_icon_black" />

        <ImageView
            android:id="@+id/login_page_button_sina_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:tint="#565656"
            android:layout_marginLeft="30dp"
            android:src="@mipmap/sina_icon_black" />

    </LinearLayout>

</LinearLayout>
